--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
       </div>
     </div>
-   
+
     <div class="container-fluid mt-4">
       <div class="row d-flex justify-content-center">
         <div class="col-md-5 animate-section">
@@ -166,14 +166,14 @@
     <div class="container-fluid">
       <div class="row mt-4">
         <div class="col-md-4 d-flex flex-column align-items-center new-box">
-          <div class="empower-box-small mb-4">
+          <div class="empower-box-small mb-4 empower-animation">
             <img
               src="./asset/img/empower-pic.png"
               class="img-fluid"
               alt="..."
             />
           </div>
-          <div class="empower-box-big">
+          <div class="empower-box-big empower-animation">
             <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
             <div class="empower-text">
               <h4 class="mt-4">Prime</h4>
@@ -184,11 +184,11 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-flex flex-column align-items-center">
-          <div class="empower-box-big mb-4">
+        <div class="col-md-4 d-flex flex-column align-items-center new-box">
+          <div class="empower-box-big mb-4 empower-animation">
             <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
           </div>
-          <div class="empower-box-small">
+          <div class="empower-box-small empower-animation">
             <img
               src="./asset/img/empower-pic.png"
               class="img-fluid"
@@ -203,15 +203,15 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-flex flex-column align-items-center">
-          <div class="empower-box-small mb-4">
+        <div class="col-md-4 d-flex flex-column align-items-center new-box">
+          <div class="empower-box-small mb-4 empower-animation">
             <img
               src="./asset/img/empower-pic.png"
               class="img-fluid"
               alt="..."
             />
           </div>
-          <div class="empower-box-big">
+          <div class="empower-box-big empower-animation">
             <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
             <div class="empower-text">
               <h4 class="mt-4">Elite</h4>
@@ -233,65 +233,65 @@
       </div>
     </div>
 
-<div class="container-fluid mt-3">
-  <div class="row d-flex justify-content-between align-items-stretch">
-    <div class="col-md-6 p-5">
-      <div class="design-content d-flex flex-column justify-content-center">
-        <p class="design-text stagger-delay-1">Design</p>
-        <h2 class="design-text stagger-delay-2 design-title">
-          Create Your Own Unique <br />
-          Smart Card Design
-        </h2>
-        <h6 class="design-text stagger-delay-3 design-subtitle">
-          With our Smart Card online design feature, you can easily
-          personalize and customize your own smart card. Choose from a
-          variety of templates, colors, and fonts to create a unique
-          design that reflects your style and brand.
-        </h6>
-        <p class="design-text stagger-delay-4">
-          <i class="bi bi-box me-2"></i> Easy-to-use Design Tools
-        </p>
-        <p class="design-text stagger-delay-4">
-          <i class="bi bi-box me-2"></i> Endless Design Possibilities
-        </p>
-        <p class="design-text stagger-delay-4">
-          <i class="bi bi-box me-2"></i> Express Your Personal or Brand Identity
-        </p>
-        <div class="d-flex align-items-center mt-3">
-          <button
-            type="button"
-            class="btn btn-outline-light pt-2 px-2 animate-button stagger-delay-5"
-          >
-            Get Started
-          </button>
-          <p class="ms-3 mb-0 design-text stagger-delay-5">
-            Learn More
-            <i class="bi bi-caret-right"></i>
-          </p>
+    <div class="container-fluid mt-3">
+      <div class="row d-flex justify-content-between align-items-stretch">
+        <div class="col-md-6 p-5">
+          <div class="design-content d-flex flex-column justify-content-center">
+            <p class="design-text stagger-delay-1">Design</p>
+            <h2 class="design-text stagger-delay-2 design-title">
+              Create Your Own Unique <br />
+              Smart Card Design
+            </h2>
+            <h6 class="design-text stagger-delay-3 design-subtitle">
+              With our Smart Card online design feature, you can easily
+              personalize and customize your own smart card. Choose from a
+              variety of templates, colors, and fonts to create a unique design
+              that reflects your style and brand.
+            </h6>
+            <p class="design-text stagger-delay-4">
+              <i class="bi bi-box me-2"></i> Easy-to-use Design Tools
+            </p>
+            <p class="design-text stagger-delay-4">
+              <i class="bi bi-box me-2"></i> Endless Design Possibilities
+            </p>
+            <p class="design-text stagger-delay-4">
+              <i class="bi bi-box me-2"></i> Express Your Personal or Brand
+              Identity
+            </p>
+            <div class="d-flex align-items-center mt-3">
+              <button
+                type="button"
+                class="btn btn-outline-light pt-2 px-2 animate-button stagger-delay-5"
+              >
+                Get Started
+              </button>
+              <p class="ms-3 mb-0 design-text stagger-delay-5">
+                Learn More
+                <i class="bi bi-caret-right"></i>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 p-5 d-flex align-items-center flex-grow-1">
+          <img
+            src="./asset/img/about_pic1.png"
+            class="img-fluid w-100 design-image"
+            alt="Hero Section Image"
+          />
         </div>
       </div>
     </div>
-    <div class="col-md-6 p-5 d-flex align-items-center flex-grow-1">
-      <img
-        src="./asset/img/about_pic1.png"
-        class="img-fluid w-100 design-image"
-        alt="Hero Section Image"
-      />
-    </div>
-  </div>
-</div>
-    
 
     <div class="container-fluid mt-3">
       <div class="row align-items-center" style="padding: 30px">
         <div class="col-md-6 design-content" style="padding-left: 20px">
-          <h2 style="line-height: 45px " class="design-text ">
+          <h2 style="line-height: 45px" class="design-text">
             Choose the Perfect Smart Card Package for Your Needs
           </h2>
         </div>
 
-        <div class="col-md-6 design-text ">
-          <p style="line-height: 35px;padding-left: 30px;">
+        <div class="col-md-6 design-text">
+          <p style="line-height: 35px; padding-left: 30px">
             At Manjithaaza, we offer a range of Smart Card packages to suit
             every requirement. Whether you're a professional looking to share
             your contact information or a business wanting to enhance your
@@ -314,7 +314,7 @@
     </div>
 
     <!-- FAQ section -->
-    <div class="container-fluid mt-3  faq-section">
+    <div class="container-fluid mt-3 faq-section">
       <div class="row align-items-center" style="padding: 30px">
         <div class="col-md-5" style="padding-left: 20px">
           <h1 class="faq-heading">FAQs</h1>
@@ -489,12 +489,16 @@
     <div class="container-fluid">
       <div class="row d-flex justify-content-between align-items-center">
         <div class="design-content col-6 p-5">
-          <h1 class="design-text ">Discover the power of NFC</h1>
-          <p class="faq-paragraph design-text ">
+          <h1 class="design-text">Discover the power of NFC</h1>
+          <p class="faq-paragraph design-text">
             Experience seamless communication with our smart NFC cards
           </p>
-          <button type="button" class="animate-button btn btn-light me-2">Try</button>
-          <button type="button" class="animate-button btn btn-outline-light">Design</button>
+          <button type="button" class="animate-button btn btn-light me-2">
+            Try
+          </button>
+          <button type="button" class="animate-button btn btn-outline-light">
+            Design
+          </button>
         </div>
         <div class="col-5 p-5">
           <img
@@ -517,8 +521,11 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row mb-5" style="padding:30px">
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 scale-up"  style="padding-left: 20px">
+      <div class="row mb-5" style="padding: 30px">
+        <div
+          class="col-12 col-sm-6 col-md-4 col-lg-3 scale-up"
+          style="padding-left: 20px"
+        >
           <div class="card hover-up" style="width: 100%">
             <img
               src="./asset/img/card.png"
@@ -617,8 +624,39 @@
       </div>
     </div>
 
-   
-    <hr style="height:2px;border-width:0;color:white;background-color:white">
+    <div class="container-fluid mt-3">
+      <div class="row d-flex justify-content-center">
+        <div style="text-align: center">
+          <img src="./asset/img/navlogo.png" class="img-fluid" alt="nav imag" />
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid mt-3">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-7">
+          <div class="footer row mt-3 text-center text-md-start">
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">About Us</div>
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">Product</div>
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">Service</div>
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">Contact</div>
+            <div class="col-12 col-md footer-item mb-2 mb-md-0">FAQ</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row d-flex justify-content-center" style="padding: 30px">
+        <hr
+          style="
+            height: 4px;
+            border-width: 0;
+            color: white;
+            background-color: white;
+          "
+        />
+      </div>
+    </div>
   </body>
- <script src="./js/transition.js"></script>
+  <script src="./js/transition.js"></script>
 </html>
