--- a/login.html
+++ b/login.html
@@ -174,8 +174,8 @@
       </div>
     </div>
     <div class="container-fluid mt-5">
-      <div class="row align-items-center px-4 py-3">
-        <div class="col-12 col-md-5 mb-4 mb-md-0">
+      <div class="row align-items-center px-4 py-3 ">
+        <div class="col-12 col-md-5 mb-4 mb-md-0 design-content">
           <div class="contact-details mb-4">
             <i class="bi bi-envelope-at-fill"></i>
             <p class="mt-2">Email</p>
@@ -198,7 +198,7 @@
             </p>
           </div>
         </div>
-        <div class="col-12 col-md-7 d-flex justify-content-center justify-content-md-end">
+        <div class="col-12 col-md-7 d-flex justify-content-center justify-content-md-end  design-content">
           <img
             src="./asset/img/about_pic1.png"
             class="img-fluid"
@@ -244,4 +244,6 @@
       </div>
     </div>
   </body>
+ <script src="./js/transition.js"></script>
+
 </html>
