--- a/solutions.html
+++ b/solutions.html
@@ -77,7 +77,7 @@
     <div class="container-fluid mt-3">
       <div class="row hero-section align-items-center">
         <div class="col-md-6" style="padding: 20px">
-          <small style="color: #e7af41">Solutions</small>
+          <small style="color: #e7af41" class="design-content">Solutions</small>
           <h2>Transform Your Business</h2>
           <p>
             Discover our comprehensive IT solutions designed to streamline your
@@ -99,14 +99,14 @@
     <div class="container-fluid mt-3">
       <div class="row">
         <div
-          class="col-md-6 p-5 d-flex justify-content-center"
+          class="col-md-6 p-5 d-flex justify-content-center design-content"
           style="flex-direction: column"
         >
-          <small style="color: #e7af41">Innovate</small>
-          <h2 class="mt-2">
+          <small style="color: #e7af41" class="design-title">Innovate</small>
+          <h2 class="mt-2 design-text">
             Custom software development services that drive success
           </h2>
-          <p class="mt-2" style="line-height: 1.5rem">
+          <p class="mt-2 design-text" style="line-height: 1.5rem">
             At Manjithaaza, we offer custom software development services
             tailored to your unique business needs. Our team of experienced
             developers will work closely with you to create innovative solutions
@@ -114,7 +114,7 @@
           </p>
 
           <div class="row justify-content-between mt-4">
-            <div class="col-md-5 innovate-section-two pb-4">
+            <div class="col-md-5 innovate-section-two pb-4 ">
               <h1 class="mt-3" style="color: #e7af41">50%</h1>
               <h6 style="line-height: 1.5rem">
                 Expertise in various programming languages and frameworks
@@ -145,7 +145,7 @@
         <div class="col-md-6 p-5 d-flex justify-content-end">
           <img
             src="./asset/img/about_pic1.png"
-            class="img-fluid"
+            class="img-fluid design-image"
             alt="Hero Section Image"
             style="max-width: 100%; height: auto; max-height: 450px; width: 90%"
           />
@@ -159,16 +159,16 @@
         <div class="col-md-6 p-5">
           <img
             src="./asset/img/about_pic1.png"
-            class="img-fluid"
+            class="img-fluid design-image"
             alt="Hero Section Image"
             style="max-width: 100%; height: auto; max-height: 450px; width: 90%"
           />
         </div>
         <div
-          class="col-md-6 p-5 d-flex justify-content-center"
+          class="col-md-6 p-5 d-flex justify-content-center design-content"
           style="flex-direction: column"
         >
-          <small style="color: #e7af41">Efficient</small>
+          <small style="color: #e7af41" class="design-title">Efficient</small>
           <h2 class="mt-2">
             Streamline your network with our expert solutions
           </h2>
@@ -557,4 +557,6 @@
       </div>
     </div>
   </body>
+ <script src="./js/transition.js"></script>
+
 </html>
