--- a/aboutUs.html
+++ b/aboutUs.html
@@ -27,7 +27,8 @@
           rel="stylesheet"
         />
         <!-- style sheet -->
-        <link rel="stylesheet" href="./css/aboutUs.css" />
+        <!-- <link rel="stylesheet" href="./css/aboutUs.css" /> -->
+        <link rel="stylesheet" href="./css/style.css" />
       </head>
 <body>
   <!-- nav bar -->
@@ -63,10 +64,10 @@
               <a class="nav-link" href="#">Blogs</a>
             </li>
             <li class="nav-item">
-              <button type="button" class="btn btn-light">Learn</button>
+              <button type="button" class="btn contact-us-btn">Learn</button>
             </li>
             <li class="nav-item">
-              <button type="button" class="btn btn-outline-light">
+              <button type="button" class="btn me-2 learn-more-btn">
                 Log In
               </button>
             </li>
@@ -444,4 +445,5 @@
   </div>
 </div>
 </body>
+<script src="./js/transition.js"></script>
 </html>
