--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
       </div>
     </div>
     <div class="container-fluid">
-      <div class="row d-flex justify-content-center" style="padding: 30px">
+      <div class="row d-flex justify-content-center" style="padding-top: 30px">
         <hr
           style="
             height: 4px;
@@ -657,6 +657,17 @@
         />
       </div>
     </div>
+    <div class="container-fluid pb-4">
+      <div class="row d-flex justify-content-between">
+        <div class="col-md-3 text-center text-md-start text-white">© 2024 Manjithaaza. All rights reserved.</div>
+        <div class="col-md-5 d-flex justify-content-between">
+          <a href="#" class="text-white text-decoration-none">Privacy Policy</a>
+          <a href="#" class="text-white text-decoration-none">Terms and Conditions</a>
+          <a href="#" class="text-white text-decoration-none">Cookie Policy</a>
+        </div>
+      </div>
+    </div>
+    
   </body>
   <script src="./js/transition.js"></script>
 </html>
