--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 <a class="nav-link" href="#">Blogs</a>
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-light">Learn</button>
+                <button type="button" class="btn contact-us-btn">Learn</button>
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-outline-light">
+                <button type="button" class="btn learn-more-btn">
                   Log In
                 </button>
               </li>
@@ -90,8 +90,8 @@
             stay connected, organized, and productive in today's fast-paced
             world.
           </p>
-          <button type="button" class="btn btn-light me-2">Learn More</button>
-          <button type="button" class="btn btn-outline-light">Log In</button>
+          <button type="button" class="btn learn-more-btn me-2">Learn More</button>
+          <button type="button" class="btn contact-us-btn">Log In</button>
         </div>
         <div class="col-md-6 d-flex justify-content-center align-items-center">
           <img
@@ -225,7 +225,7 @@
         <div class="d-flex justify-content-center">
           <button
             type="button"
-            class="btn btn-outline-light justify-content-center pt-1 px-4 mt-3"
+            class="btn learn-more-btn justify-content-center pt-1 px-4 mt-3"
           >
             Learn More <i class="bi bi-caret-right"></i>
           </button>
@@ -234,10 +234,10 @@
     </div>
 
     <div class="container-fluid mt-3">
-      <div class="row d-flex justify-content-between align-items-stretch">
-        <div class="col-md-6 p-5">
+      <div class="row d-flex justify-content-around align-items-center">
+        <div class="col-md-5 p-5 box-container" style="max-height: 500px;margin-left: 5px;">
           <div class="design-content d-flex flex-column justify-content-center">
-            <p class="design-text stagger-delay-1">Design</p>
+            <p class="design-text stagger-delay-1 small-text">Design</p>
             <h2 class="design-text stagger-delay-2 design-title">
               Create Your Own Unique <br />
               Smart Card Design
@@ -261,7 +261,7 @@
             <div class="d-flex align-items-center mt-3">
               <button
                 type="button"
-                class="btn btn-outline-light pt-2 px-2 animate-button stagger-delay-5"
+                class="btn contact-us-btn pt-2 px-2 animate-button stagger-delay-5"
               >
                 Get Started
               </button>
@@ -272,10 +272,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 p-5 d-flex align-items-center flex-grow-1">
+        <div class="col-md-5 p-5  ">
           <img
             src="./asset/img/about_pic1.png"
-            class="img-fluid w-100 design-image"
+            class="img-fluid w-90 design-image"
             alt="Hero Section Image"
           />
         </div>
@@ -308,7 +308,7 @@
     <div class="container-fluid mt-3">
       <div class="row" style="padding: 30px">
         <div class="col-md-12 d-flex justify-content-center">
-          <img src="./asset/img/big.png" class="img-fluid w-100" />
+          <img src="./asset/img/big.png" class="img-fluid w-90" style="height: 450px" />
         </div>
       </div>
     </div>
@@ -317,7 +317,7 @@
     <div class="container-fluid mt-3 faq-section">
       <div class="row align-items-center" style="padding: 30px">
         <div class="col-md-5" style="padding-left: 20px">
-          <h1 class="faq-heading">FAQs</h1>
+          <h1 class="faq-heading small-text">FAQs</h1>
           <p class="faq-paragraph">
             Find answers to common questions about our smart NFC cards and
             services.
@@ -493,10 +493,10 @@
           <p class="faq-paragraph design-text">
             Experience seamless communication with our smart NFC cards
           </p>
-          <button type="button" class="animate-button btn btn-light me-2">
+          <button type="button" class="animate-button btn learn-more-btn me-2">
             Try
           </button>
-          <button type="button" class="animate-button btn btn-outline-light">
+          <button type="button" class="animate-button btn contact-us-btn">
             Design
           </button>
         </div>
@@ -513,7 +513,7 @@
     <div class="container-fluid">
       <div class="row design-content">
         <div class="">
-          <p class="text-center">Articles</p>
+          <p class="text-center small-text">Articles</p>
           <h3 class="text-center">Discover Valuable Resources Here</h3>
           <p class="text-center">Stay Informed with Our Latest Articles</p>
         </div>
@@ -617,7 +617,7 @@
       <div class="d-flex justify-content-center">
         <button
           type="button"
-          class="btn btn-outline-light justify-content-center pt-2"
+          class="btn contact-us-btn justify-content-center pt-2"
         >
           View All
         </button>
