--- a/solutions.html
+++ b/solutions.html
@@ -106,7 +106,7 @@
           <h2 class="mt-2 design-text">
             Custom software development services that drive success
           </h2>
-          <p class="mt-2 design-text" style="line-height: 1.5rem">
+          <p class="mt-2 design-text dark-text" style="line-height: 1.5rem">
             At Manjithaaza, we offer custom software development services
             tailored to your unique business needs. Our team of experienced
             developers will work closely with you to create innovative solutions
@@ -207,7 +207,7 @@
           <h2 class="mt-2">
             Protect Your Business with Advanced Cybersecurity Solutions
           </h2>
-          <p class="mt-2" style="line-height: 1.5rem">
+          <p class="mt-2 dark-text" style="line-height: 1.5rem">
             At Manjithaaza, we understand the importance of safeguarding your
             business from cyber threats. Our comprehensive cybersecurity
             solutions provide advanced protection and peace of mind.
@@ -254,10 +254,10 @@
 
     <!-- fifth section -->
     <div class="container-fluid mt-4">
-      <div class="row d-flex justify-content-center">
+      <div class="row d-flex justify-content-center animate-section">
         <div class="col-md-5">
           <p style="text-align: center; color: #e7af41">Empower</p>
-          <h1 style="text-align: center">
+          <h1 style="text-align: center" class="">
             Cutting-edge IT Solutions for Your Business
           </h1>
           <p style="text-align: center; line-height: 28px">
