--- a/printsolution.html
+++ b/printsolution.html
@@ -95,7 +95,7 @@
       </div>
     </div>
     <div class="container-fluid mt-4">
-      <div class="row d-flex justify-content-center">
+      <div class="row d-flex animate-section justify-content-center">
         <div class="col-md-5">
           <p style="text-align: center; color: #e7af41">Empower</p>
           <h1 style="text-align: center">
@@ -328,11 +328,11 @@
     </div>
 
     <div class="container-fluid">
-      <div style="padding: 20px;">
+      <div style="padding: 30px;">
         <h2>Client Feedback</h2>
         <p>Our printing services exceeded our clients' expectations.</p>
       </div>
-      <div class="row" style="padding: 20px">
+      <div class="row" style="padding: 30px">
         <div class="col-md-6">
           <div style="color: #e7af41">
             <i class="bi bi-star-fill"></i>
@@ -371,13 +371,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-        <div style="padding: 20px;">
-          <h2>Client Feedback</h2>
-          <p>Our printing services exceeded our clients' expectations.</p>
-        </div>
-       
-      </div>
+  
 
       <div class="container-fluid mt-3">
         <div class="row d-flex justify-content-center">
