--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
     <!-- style sheet -->
-    <link rel="stylesheet" href="./css/service.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- nav bar -->
@@ -63,10 +63,10 @@
                 <a class="nav-link" href="#">Blogs</a>
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-light">Learn</button>
+                <button type="button" class="btn contact-us-btn">Learn</button>
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-outline-light">
+                <button type="button" class="btn me-2 learn-more-btn">
                   Log In
                 </button>
               </li>
@@ -86,8 +86,8 @@
               Stay connected, organized, and productive with our cutting-edge
               smart technology.
             </p>
-            <button type="button" class="btn btn-light me-2">Learn More</button>
-            <button type="button" class="btn btn-outline-light">Log In</button>
+            <button type="button" class="btn learn-more-btn me-2">Learn More</button>
+            <button type="button" class="btn contact-us-btn">Log In</button>
           </div>
           <div
             class="col-md-6 d-flex justify-content-center align-items-center"
@@ -103,9 +103,9 @@
     </div>
     <!-- service 2nd section -->
     <div class="container-fluid mt-4">
-      <div class="row d-flex justify-content-center">
+      <div class="row d-flex justify-content-center animate-section">
         <div class="col-md-7">
-          <p style="text-align: center">Innovative</p>
+          <p style="text-align: center" class="small-text">Innovative</p>
           <h1 style="text-align: center">
             Comprehensive Solutions for <br />
             Your Branding, IT, and Printing Needs
@@ -155,7 +155,7 @@
     <div class="d-flex align-items-center justify-content-center">
       <button
         type="button"
-        class="btn btn-outline-light justify-content-center pt-2 px-2 mt-3"
+        class="btn contact-us-btn justify-content-center pt-2 px-2 mt-3"
       >
         Get Started
       </button>
@@ -372,4 +372,6 @@
       </div>
     </div>
   </body>
+ <script src="./js/transition.js"></script>
+
 </html>
