--- a/solutions.html
+++ b/solutions.html
@@ -89,9 +89,13 @@
           </button>
           <button type="button" class="btn contact-us-btn">Contact Us</button>
         </div>
-        <div
-          class="col-md-6 d-flex justify-content-center align-items-center"
-        ></div>
+        <div class="col-md-6 d-flex justify-content-center align-items-center">
+          <img
+            src="./asset/img/manjeeza.png"
+            class="img-fluid"
+            alt="Hero Section Image"
+          />
+        </div>
       </div>
     </div>
 
@@ -401,12 +405,12 @@
     </div>
     <div class="container-fluid">
       <div style="margin-left: 35px">
-        <small>Innovative</small>
+        <small class="small-text">Innovative</small>
         <h1>Our Experts</h1>
-        <small>Meet our talented team of IT solution specialists.</small>
+        <small class="dark-text">Meet our talented team of IT solution specialists.</small>
       </div>
       <div class="row d-flex justify-content-around" style="padding: 40px">
-        <div class="col-md-3">
+        <div class="col-md-3 scale-up">
           <i class="bi bi-person-fill" style="font-size: 40px"></i>
 
           <p>
@@ -424,7 +428,7 @@
             <i class="bi bi-dribbble px-2"></i>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 scale-up">
           <i class="bi bi-person-fill" style="font-size: 40px"></i>
 
           <p>
@@ -442,7 +446,7 @@
             <i class="bi bi-dribbble px-2"></i>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 scale-up">
           <i class="bi bi-person-fill" style="font-size: 40px"></i>
 
           <p>
@@ -460,7 +464,7 @@
             <i class="bi bi-dribbble px-2"></i>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 scale-up">
           <i class="bi bi-person-fill" style="font-size: 40px"></i>
 
           <p>
@@ -487,7 +491,7 @@
           <div>
             <small style="color: #e7af41">Connect</small>
             <h2>Contact Information</h2>
-            <p>Find our physical office locations and contact details below.</p>
+            <p class="dark-text">Find our physical office locations and contact details below.</p>
           </div>
           <div class="contact-details mb-4 mt-5">
             <i class="bi bi-envelope-at-fill"></i>
