--- a/terms.html
+++ b/terms.html
@@ -88,9 +88,13 @@
           </button>
           <button type="button" class="btn contact-us-btn">Contact Us</button>
         </div>
-        <div
-          class="col-md-6 d-flex justify-content-center align-items-center"
-        ></div>
+        <div class="col-md-6 d-flex justify-content-center align-items-center">
+          <img
+            src="./asset/img/manjeeza.png"
+            class="img-fluid"
+            alt="Hero Section Image"
+          />
+        </div>
       </div>
     </div>
     <div class="container-fluid mt-4">
@@ -205,4 +209,6 @@
     </div>
       
   </body>
+  <script src="./js/transition.js"></script>
+
 </html>
